--- a/src/streeto/pubspec.yaml
+++ b/src/streeto/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   logging: ^0.11.3+2
   flutter_i18n: ^0.6.4
   geolocator: ^5.1.4+1
-  permission_handler: '^3.1.0'
+  permission_handler: ^3.3.0
   flutter_spinkit: ^3.1.0
   chopper: ^3.0.1
   json_annotation: ^2.0.0
@@ -27,6 +27,7 @@ dependencies:
   sembast: ^2.1.0
   path_provider: ^1.3.1
   shared_preferences: ^0.5.3+5
+  cached_network_image: ^1.1.2+1
 
 dev_dependencies:
   flutter_test:
@@ -37,8 +38,6 @@ dev_dependencies:
   build_runner: any
   chopper_generator: any
   json_serializable: ^3.0.0
-  flutter_cache_manager: ^1.1.3
-  cached_network_image: ^1.1.2+1
 
 flutter:
   uses-material-design: true
